# sdc-parser

./: .gitignore  Cargo.toml  README.md  azure-pipelines.yml
.github/: dependabot.yml
examples/: bench.rs  check.rs  show.rs
src/: lib.rs  object.rs  sdc.rs  util.rs
testcase/: ghrd.sdc
