[package]
name = "sdc-parser"
version = "0.1.0"
authors = ["dalance@gmail.com"]
repository = "https://github.com/dalance/sdc-parser"
keywords = []
categories = []
license = "MIT OR Apache-2.0"
readme = "README.md"
description = ""
edition = "2018"

[dependencies]
combine = "3.8.1"

[dev-dependencies]
walkdir = "2.2.7"
